# fizika-old

./: .gitattributes  Cargo.toml  Dockerfile  bind.txt  clean.txt  debug_print.txt  eq.txt  examples.txt  fizika.code-workspace  flatten.rs  flatten.txt  flatten_clean.txt  formula rules.txt  formulas.txt  formulasold.txt  index.html  output.csv  package.json  pnpm-lock.yaml  pseudo.txt  results.txt  test.txt  tree.txt  truth table.xlsx  with.txt  without.txt  wrong.rs  wrong.txt  wrong2.txt
benches/: general.rs
old/: file.csv  main.rs
pseudo/: examples.txt  expand.old.rs  flatten.txt  formula rules.txt  formulas.txt  function properties.txt  output.csv  print.txt  truth table.xlsx  with.txt
pupeteer/: direct.ts  index cp.ts  index.ts  output.json  package.json
react/: anze.txt  chapter_infos.json  package.json  plan.md  tsconfig.json
react/components/: ErrorBoundary.jsx  NoSSR.tsx  TinyMCE.tsx
react/pages/: _app.tsx  _document.tsx  db.tsx  index.tsx
react/pages/api/: get_course_chapters.ts  list_chapters.ts  list_courses.ts
react/public/tinymce/: math_wiris.min.js  styles.css
rust/: .env  .gitignore  Cargo.toml  TODO.txt  build.sh  chapter_infos.json  chapter_infos.txt  chapter_infos_output.json  counts.txt  draftjs.json  fix_courses.py  index.html  links.txt  math.py  meilisearch.sh  output.xml  tmp.js
rust/javascript/: end.js  start.js
rust/prisma/: schema.prisma  seed.ts
rust/quizes/: quiz_2.txt  quiz_3.txt
rust/src/: database.rs  draftjs.rs  html.rs  html2.rs  javascript.rs  lib.rs  main.rs  markdown.rs  parse_file.rs  process_html.rs  recurse_node.rs  scrape.rs  scrape_utils.rs  utils.rs
solid/: .env  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.cjs  vercel.json  vite.config.ts  vite.config.ts.timestamp-1668800745908.mjs
solid-test/: package.json  pnpm-lock.yaml
solid-test/src/routes/: index.tsx
solid/prisma/: schema.prisma  seed.js
solid/src/: root.tsx
solid/src/components/: AppShell.tsx  Content.tsx  Navbar.tsx  Sidebar.tsx  TinyMCE.tsx
solid/src/routes/: (home).tsx  index.tsx
solid/src/routes.old/: index.tsx  login.tsx
src/: ast.rs  grammar.pest  lib.rs  main.rs  main.rs.old  new.rs  parser.rs  v3.rs
src/actions/: analyze.rs  bind.rs  bind_recurse.rs  bindold.rs  expand copy.rs  expand.old.rs  expand.rs  flatten.rs  flatten_old.rs  flatten_old2.rs  flattenold.rs  is_same.rs  match_expression.rs  mod.rs  simplify.rs
src/actions/strategies/: apply_inverse.rs  flatten.rs  mod.rs  simplify.rs  solve_one_variable.rs  strategy.rs
src/ast/: analyzed_equation.rs  analyzed_expression.rs  app.rs  context.rs  debug_print.rs  element.rs  element_old.rs  equation copy.rs  equation.rs  equation_to_string.rs  expression.rs  flatten.old.rs  flatten.rs  mod.rs  node.rs  product.rs  token_to_element.rs  token_to_node.rs
src/ast/latex/: mod.rs  parse_latex.rs
src/expression/: ast.rs  from_tokens.rs  mod.rs  rpn.rs  rpn_to_ast.rs  token_to_rpn.rs
src/graph/: graph.rs
src/old/: ast.rs  example.rs  token_to_rpn.rs
src/output/: debug_tree.rs  equation_to_rpn.rs  equation_to_string.rs  equation_to_string_clean.rs  equation_to_string_old.rs  equation_to_string_old2.rs  equation_to_string_old3.rs  equation_to_string_old4.rs  mod.rs
src/tokenizer/: mod.rs  parser.rs  parsers.rs  small_parsers.rs  token.rs
svelte/: new.html  old.html  package-lock.json  package.json
svelte/src/lib/: testpage.ts
svelte/src/routes/: +page.svelte
t3/: next.config.mjs  package.json  pnpm-lock.yaml  pr.sh  tailwind.config.cjs  tsconfig.json
t3/prisma/: db.sqlite  schema.prisma  seed.js  seed.ts
t3/src/env/: schema.mjs
t3/src/pages/: index.tsx  tiny.tsx
todo svelte/: package.json
todo svelte/src/lib/: Counter.svelte
web/: .env.example  .gitignore  README.MD  mathlive-fonts.css  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/app/: layout.tsx  page.js
web/app.old/: EmotionRootStyleRegistry.tsx  layout.tsx  page.tsx
web/components/: MockUpload.tsx  Prisma.tsx  Quiz.tsx  TinyMCE.tsx  initialState.js
web/config/: index.js
web/pages/: _app.tsx  db.tsx  index.tsx  megadraft.tsx  tiptap.tsx  wysiwyg.tsx
web/pages.old/: _app.tsx
web/pages.old/api/: get_html.ts  list_courses.ts
web/pages/api/: draftjs.ts  list_chapters.ts
web/prisma/: db.sqlite  dev.db  schema copy.prisma  schema.prisma  seed.js  seed.ts
web/public/: manifest.webmanifest
web/public/tinymce/: math_wiris.min.js
web/src/: entry-server.tsx  root.tsx
web/src/components/: AppShell.tsx  Header.tsx  (+7 more)
www/: package.json  pnpm-lock.yaml
www/pages/: index.tsx
(+54 files in other folders)
