[package]
name = "math-eval"
version = "0.1.0"
edition = "2021"
default-run = "math-eval"
authors = ["Luka Pršina"]

# [lib]
# crate-type = ["rlib", "cdylib"]

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
criterion = "0.4.0"
delegate = "0.7.0"
getrandom = { version = "0.2.7", features = ["js"], optional = true }
itertools = "0.10.3"
nom = "7.1.1"
num-bigint = "0.4.3"
once_cell = "1.17.0"
ordered-float = "3.0.0"
ptree = "0.4.0"
ryu = "1.0.10"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
