[package]
name = "math_eval"
version = "0.1.0"
edition = "2021"
default-run = "hardcoded"
authors = ["Luka Pršina"]

#[lib]
#name = "math_eval"
#crate-type = ["rlib", "dylib"]

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
getrandom = { version = "0.2.7", features = ["js"], optional = true }
itertools = "0.10.3"
nom = "7.1.1"
num = { version = "0.4.0", features = ["num-bigint"] }
once_cell = "1.17.0"
petgraph = "0.6.3"
rustyline = "11.0.0"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
