[package]
name = "fizika"
version = "0.1.0"
edition = "2021"
default-run = "fizika"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
# version 0.9 (latest) doesn't use idle browser timeout
headless_chrome = { path = "../rust-headless-chrome" }
html-escape = "0.2.11"
# inquire = "0.4.0"
itertools = "0.10.5"

#quickjs not supported on windows
katex = { version = "0.4.4", features = ["duktape"], default-features = false }
#katex = "0.4.4"
reqwest = "0.11.12"
select = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tendril = "0.4.3"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4"] }
wasm-bindgen = "0.2.83"
xml-rs = "0.8.4"
